# my_experiments

./: README.md
OPCUA-OpenUSD/: .env.example  .gitignore  BUILD.md  README.md  docker-compose.yml
OPCUA-OpenUSD/bridge/: Dockerfile  pyproject.toml
OPCUA-OpenUSD/bridge/src/: main.py  opcua_client.py  usd_writer.py
OPCUA-OpenUSD/dashboard/: Dockerfile
OPCUA-OpenUSD/dashboard/src/: server.py
OPCUA-OpenUSD/dashboard/web/: app.js  index.html  style.css
OPCUA-OpenUSD/docs/: DEMO.md  README.md
OPCUA-OpenUSD/landing-page/: Dockerfile  index.html
OPCUA-OpenUSD/maf-agent/: Dockerfile  pyproject.toml
OPCUA-OpenUSD/maf-agent/prompts/: system.md
OPCUA-OpenUSD/maf-agent/src/: agent.py  anomaly_detector.py  main.py  tools.py
OPCUA-OpenUSD/omniverse-kit/: Dockerfile  README.md  playback.toml
OPCUA-OpenUSD/opcua-nodered/: Dockerfile  flows.json  settings.js
OPCUA-OpenUSD/opcua-server/: Dockerfile  entrypoint.sh  pyproject.toml
OPCUA-OpenUSD/opcua-server/src/: robotics_model.py  server.py  simulator.py
OPCUA-OpenUSD/pgvector/: Dockerfile  init.sql
OPCUA-OpenUSD/rag-mcp/: Dockerfile  pyproject.toml
OPCUA-OpenUSD/rag-mcp/src/: embedder.py  generator.py  init_db.py  retriever.py  server.py
OPCUA-OpenUSD/scripts/: demo-anomaly.sh  gen-certs.sh  healthcheck.sh  launch_vllm_nemotron3_gpu0.sh  launch_vllm_nemotron_gpu0.sh  nano_v3_reasoning_parser.py
OPCUA-OpenUSD/telegraf/: telegraf.conf
OPCUA-OpenUSD/traefik/: dynamic.yml  traefik.yml
OPCUA-OpenUSD/usd-assets/: README.md  cell.usda  live.usda  robot.usda  stage.usda
mold-surrogate/: .gitignore  CLAUDE.md  README.md  requirements.txt
mold-surrogate/data/: sample_dataset.npz
mold-surrogate/demo/: compare.py  interactive.py
mold-surrogate/models/: history.json
mold-surrogate/src/: dataset.py  evaluate.py  geometry.py  model.py  solver.py  train.py
(+5 files in other folders)
