[project]
name = "maf-agent"
version = "0.1.0"
description = "Anomaly-driven advisory agent for the robot OPC UA server"
requires-python = ">=3.11"
dependencies = [
    "asyncua>=1.1.5",
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
