[project]
name = "opcua-server"
version = "0.1.0"
description = "Simulated 6-axis robot OPC UA server (Robotics Companion-spec flavored)"
requires-python = ">=3.11"
dependencies = [
    "asyncua>=1.1.5",
    "cryptography>=43.0",
    "pydantic>=2.7",
    "uvloop>=0.19; sys_platform != 'win32'",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
