[project]
name = "rag-mcp"
version = "0.1.0"
description = "RAG over OPC UA spec corpus, exposed via MCP-SSE + HTTP"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "openai>=1.50",
    "sentence-transformers>=3.1",
    "mcp>=1.0",
    "pydantic>=2.7",
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
